<resources>
    <string name="app_name">Orange News</string>
    <string name="shape">Shape</string>
    <string name="logo">Logo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="full_name">Full Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="new_account">New \nAccount</string>
    <string name="auth_title">Be up to date, \nread and watch</string>
    <string name="login">Login</string>
    <string name="create_account">Create Account</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="or_sign_up_and_login_with">or Sign Up and Login with</string>
    <string name="google">Google</string>
    <string name="welcome_back">Welcome back</string>
    <string name="image_background">image Background</string>
    <string name="reset_password">Reset Password</string>
    <string name="reset_password_msg">" We have received your password reset request. Please check your mail"</string>
    <string name="empty_fields">You cannot leave the fields blank.</string>
    <string name="empty_field_mail">You cannot empty mail address</string>
    <string name="save">Save</string>
    <string name="category">Category</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="top_headlines">Top Headlines</string>
</resources>